--- a/package.xml
+++ b/package.xml
@@ -12,7 +12,9 @@
   <depend>std_srvs</depend>
   <depend>sensor_msgs</depend>
   <depend>msg_pkg</depend>
-
+  
+  <exec_depend>ros2launch</exec_depend>
+  
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
