--- a/package.xml
+++ b/package.xml
@@ -21,7 +21,15 @@
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
 
+
+  <build_depend>ament_python</build_depend>
+  <exec_depend>ament_python</exec_depend>
+
   <export>
-    <build_type>ament_python</build_type>
+    <build_type>ament_cmake</build_type>
+    <launch_ros 
+      directory="share/nest_gps/launch"
+    />
   </export>
 </package>
+
